# kio

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  build_kio.py  codecov.yml  compose.yml  pyproject.toml  setup.cfg
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yaml  docs.yaml  release.yaml
benchmarks/: parsing.py  parsing_memory.py  roundtrip-serialization.py  ruff.toml
codegen/: __init__.py  __main__.py  case.py  fetch_schema.py  generate_error_codes.py  generate_index.py  generate_schema.py  generate_tests.py  generator.py  header_schema.py  introspect_schema.py  parser.py  recreate_schema_path.py  util.py  versions.py
codegen/template/: primitive.py  protocol.py
container/: compose.yml  update-run.sh
docs/: Makefile  conf.py  index.rst  pyproject.toml  requirements.in  requirements.txt
docs/pages/: dynamic-index-lookups.rst  goals.rst  schema.rst  serial.rst  usage.rst
java_tester/: .gitignore  Dockerfile  Makefile  build.gradle  settings.gradle
rust/: Cargo.toml
rust/src/: datetime.rs  entity.rs  lib.rs  parse.rs  readers.rs  schema.rs  uuid.rs
rust/src/py_imports/: dataclasses.rs  datetime.rs  error_code.rs  implicit_defaults.rs  introspect.rs  kio_native.rs  mod.rs  uuid.rs
src/kio/: __init__.py  _kio_core.pyi  _kio_native.pyi  _utils.py  constants.py  index.py
src/kio/parse/: decoders.py  encoders.py  errors.py
src/kio/records/: readers.py  schema.py  writers.py
src/kio/schema/: entity.py  errors.py  index.py  primitive.py  protocol.py  types.py
src/kio/schema/add_offsets_to_txn/request/: v0.py  v1.py  v2.py  v3.py
src/kio/schema/add_offsets_to_txn/response/: v0.py  v1.py  v3.py
src/kio/schema/add_offsets_to_txn/v0/: request.py  response.py
src/kio/schema/add_offsets_to_txn/v1/: request.py  response.py
src/kio/schema/add_offsets_to_txn/v2/: request.py  response.py
src/kio/schema/add_offsets_to_txn/v3/: request.py  response.py
src/kio/schema/add_offsets_to_txn/v4/: __init__.py  request.py  response.py
src/kio/schema/add_partitions_to_txn/request/: v0.py  v2.py  v3.py
src/kio/schema/add_partitions_to_txn/response/: v1.py  v3.py
src/kio/schema/add_partitions_to_txn/v0/: __init__.py  request.py  response.py
src/kio/schema/add_partitions_to_txn/v1/: request.py  response.py
src/kio/schema/add_partitions_to_txn/v2/: request.py  response.py
src/kio/schema/add_partitions_to_txn/v3/: request.py  response.py
src/kio/schema/add_partitions_to_txn/v4/: request.py  response.py
src/kio/schema/add_partitions_to_txn/v5/: request.py  response.py
src/kio/schema/add_raft_voter/v0/: __init__.py  request.py  response.py
src/kio/schema/allocate_producer_ids/request/: v0.py
src/kio/schema/allocate_producer_ids/response/: v0.py
src/kio/schema/allocate_producer_ids/v0/: __init__.py  request.py  response.py
src/kio/schema/alter_client_quotas/response/: v0.py  v1.py
src/kio/schema/alter_client_quotas/v0/: request.py  response.py
src/kio/schema/alter_client_quotas/v1/: __init__.py  request.py  response.py
src/kio/schema/alter_configs/request/: v0.py  v1.py  v2.py
src/kio/schema/alter_configs/response/: v0.py  v1.py  v2.py
src/kio/schema/alter_configs/v0/: request.py  response.py
src/kio/schema/alter_configs/v1/: request.py  response.py
src/kio/schema/alter_configs/v2/: __init__.py  request.py  response.py
src/kio/schema/alter_partition/request/: v0.py  v1.py  v2.py
src/kio/schema/alter_partition/response/: v0.py  v1.py  v2.py
src/kio/schema/alter_partition/v0/: request.py  response.py
src/kio/schema/alter_partition/v1/: request.py  response.py
src/kio/schema/alter_partition/v2/: __init__.py  request.py  response.py
src/kio/schema/alter_partition/v3/: request.py  response.py
src/kio/schema/alter_partition_reassignments/request/: v0.py
src/kio/schema/alter_partition_reassignments/response/: v0.py
src/kio/schema/alter_partition_reassignments/v0/: __init__.py  request.py  response.py
src/kio/schema/alter_replica_log_dirs/request/: v0.py  v1.py  v2.py
src/kio/schema/alter_replica_log_dirs/response/: v0.py  v1.py  v2.py
src/kio/schema/alter_replica_log_dirs/v0/: request.py  response.py
src/kio/schema/alter_replica_log_dirs/v1/: request.py  response.py
src/kio/schema/alter_replica_log_dirs/v2/: __init__.py  request.py  response.py
src/kio/schema/alter_user_scram_credentials/request/: v0.py
src/kio/schema/alter_user_scram_credentials/response/: v0.py
src/kio/schema/alter_user_scram_credentials/v0/: __init__.py  request.py  response.py
src/kio/schema/api_versions/request/: v2.py
src/kio/schema/api_versions/response/: v0.py  v1.py  v3.py
src/kio/schema/api_versions/v0/: request.py  response.py
src/kio/schema/api_versions/v1/: request.py  response.py
src/kio/schema/api_versions/v2/: request.py  response.py
src/kio/schema/api_versions/v3/: request.py  response.py
src/kio/schema/api_versions/v4/: __init__.py  request.py  response.py
src/kio/schema/assign_replicas_to_dirs/v0/: __init__.py  request.py  response.py
src/kio/serial/: __init__.py  _implicit_defaults.py  _introspect.py  _parse.py  _serialize.py  _shared.py  _streaming_parser.py  decoders.py  encoders.py  errors.py  introspect.py  parse.py  readers.py  serialize.py  writers.py
src/kio/static/: _phantom.py  constants.py  primitive.py  protocol.py
tests/: conftest.py  docker-compose-java-tester.yaml  fixtures.py  hypothesis.py  read.py  test_foo.py  test_index.py  test_integration.py
tests/parse/: test_decoders.py  test_encoders.py  test_parse.py  test_roundtrips.py
tests/records/: fixtures.py  test_readers.py  test_roundtrips.py  test_writers.py
tests/schema/: test_index.py  test_primitive.py
tests/serial/: test_decoders.py  test_encoders.py  test_flexible_arrays.py  test_implicit_defaults.py  test_introspect.py  test_legacy_arrays.py  test_parse.py  test_readers.py  test_roundtrips.py  test_serialize.py  test_tagged_fields.py  test_writers.py
tests/static/: test_phantom.py  test_primitive.py
(+1078 files in other folders)
