[metadata]
name = kafka-protocol
version = attr: kio.__version__
description = Kafka data types for Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
author = Anton Agestam
author_email = anton.agestam@aiven.io
url = https://github.com/aiven/kio/
project_urls =
    Source Repository = https://github.com/aiven/kio

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.11
install_requires =
    typing-extensions>=4.6.0
    phantom-types>=1.2.1

[options.packages.find]
where = src

[options.package_data]
kio = py.typed

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-icdiff
    pytest-random-order
    hypothesis>=6.61.0
    coverage
codegen =
    pydantic>=1.10.4,<2
    requests
    pre-commit
all =
    kafka-protocol[test]
    kafka-protocol[codegen]

[mypy]
python_version = 3.11
show_error_codes = True
pretty = True
files = codegen, tests, src

ignore_missing_imports = False
no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_subclassing_any = True

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-tests.*]
disallow_untyped_defs = False
disallow_untyped_calls = False
disallow_any_expr = False
disallow_untyped_decorators = False
disallow_incomplete_defs = False

[coverage:run]
source = src
branch = True

[coverage:report]
skip_covered = True
show_missing = True
exclude_lines =
    pragma: no cover
    # ignore non-implementations
    ^\s*\.\.\.
    ^\s*assert_never\(
    ^\s*case no_match:$
    ^\s*if TYPE_CHECKING:$
